# pymagiclaw

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
python_examples/: franka.py  gripper.py  test.py
src/: franka.rs  gripper.rs  lib.rs  main.rs
