[package]
name = "pymagiclaw"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymagiclaw"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"] }
numpy = "0.22.1"
libfranka-rs = "0.9"
tungstenite = "0.24.0"
nalgebra = "0.33.2"
